[package]
name = "ps17-api-client"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "common"
path = "src/common/lib.rs"

[[bin]]
name = "cli"
path = "src/cli/main.rs"


[dependencies.anyhow]
version = "1.0.75"

[dependencies.roxmltree]
version = "0.18.1"

[dependencies.clap]
version = "4.4.4"
features = ["derive"]

[dependencies.arrow]
version = "48.0.0"

[dependencies.parquet]
version = "48.0.0"
features = ["arrow"]

[dependencies.chrono]
version = "0.4.31"

[dependencies.serde]
version = "1.0.188"
features=["derive"]

[dependencies.serde_json]
version = "1.0.107"

[dependencies.reqwest]
version = "0.11.20"
features = ["json", "stream"]

[dependencies.tokio]
version = "1.32.0"
features = ["full"]

[dependencies.base64]
version = "0.21.5"

[dependencies.http-body-util]
version = "0.1.0-rc.3"

[dependencies.rocket]
version = "0.5.0-rc.4"

[dependencies.arrow2]
version = "0.18.0"
features = ["io_json_integration", "io_json" ,"io_ipc", "io_parquet", "io_parquet_compression", "io_parquet_gzip"]

[dependencies.parquet2]
version = "0.17.2"
features = ["gzip"]

[dependencies.json-deserializer]
version = "0.4.4"
features = ["preserve_order"]

[dependencies.simdutf8]
version = "0.1.4"

[dependencies.tracing]
version = "0.1.40"
features = ["release_max_level_info", "max_level_trace", "tracing-attributes", "attributes"]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["fmt", "tracing-log"]

[dependencies.tracing-attributes]
version = "0.1.27"


[dependencies.toml]
version = "0.8.6"

[dependencies.postgres]
version = "0.19.7"

[dependencies.itoa]
version = "1.0.9"

[dependencies.tokio-postgres]
version = "0.7.10"